--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "thanks"
 version = "0.1.0"
-authors = ["Mark Rousskov <mark.simulacrum@gmail.com>"]
+authors = ["The Rust Project Developers"]
 edition = "2018"
 
 [dependencies]
@@ -9,6 +9,7 @@ git2 = "0.8"
 semver = "0.9"
 tempfile = "3"
 lazy_static = "1"
+handlebars = "2.0.0-beta.2"
 
 [profile.release]
 debug = 2
