--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ dist: xenial
 
 env:
   RUSTINFRA_DEPLOY_DIR: output
+  RUSTINFRA_CLOUDFRONT_DISTRIBUTION: E3URKC86CEGJWE
 import:
   - rust-lang/simpleinfra/travis-configs/static-websites.yml
 
