--- a/public/_rustinfra_config.json
+++ b/public/_rustinfra_config.json
@@ -6,5 +6,6 @@
         "X-XSS-Protection": "1; mode=block",
         "Referrer-Policy": "no-referrer, strict-origin-when-cross-origin",
         "Content-Security-Policy": "default-src 'none'; style-src 'self'; img-src 'self'; font-src 'self'"
-    }
+    },
+    "github_pages_origin": "rust-lang.github.io/thanks"
 }
