Add mailmap README

--- a/mailmap/Cargo.toml
+++ b/mailmap/Cargo.toml
@@ -3,7 +3,11 @@ name = "mailmap"
 version = "0.1.0"
 authors = ["Mark Rousskov <mark.simulacrum@gmail.com>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+description = "Parses mailmap files into Rust structures"
+repository = "https://github.com/rust-lang/thanks"
+readme = "README.md"
+keywords = ["git", "mailmap"]
+categories = ["parsing"]
+license = "MIT OR Apache-2.0"
 
 [dependencies]
