--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ env:
   RUSTINFRA_DEPLOY_DIR: output
   RUSTINFRA_CLOUDFRONT_DISTRIBUTION: E3URKC86CEGJWE
 import:
-  - rust-lang/simpleinfra/travis-configs/static-websites.yml
+  - rust-lang/simpleinfra:travis-configs/static-websites.yml
 
 cache:
   directories:
