--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,7 @@ name: CI
 on:
   push: {}
   pull_request: {}
+  workflow_dispatch: {}
   schedule:
     - cron: "0 0 * * *" # Every day at 00:00 UTC
 
