--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,9 @@ on:
   schedule:
     - cron: "0 0 * * *" # Every day at 00:00 UTC
 
+permissions:
+ contents: write
+
 jobs:
   test_and_deploy:
     name: Test and deploy
