--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ handlebars = { version = "4.1.1", features = ["dir_source"] }
 walkdir = "2"
 regex = "1.5.5"
 mailmap = { path = "./mailmap" }
+ureq = { version = "2.6.2", features = ["json"] }
+unicase = "2.6.0"
 
 [profile.release]
 debug = 2
