--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,12 +10,12 @@ permissions:
  contents: write
 
 jobs:
-  test_and_deploy:
-    name: Test and deploy
+  build:
+    name: Build
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the source code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 1
 
@@ -27,12 +27,35 @@ jobs:
       - name: Build static website
         run: cargo run --release
 
-      - name: Deploy to production
-        uses: rust-lang/simpleinfra/github-actions/static-websites@master
-        with:
-          deploy_dir: output
-          github_token: "${{ secrets.github_token }}"
-          cloudfront_distribution: E3URKC86CEGJWE
-          aws_access_key_id: "${{ secrets.aws_access_key_id }}"
-          aws_secret_access_key: "${{ secrets.aws_secret_access_key }}"
+      - name: Upload artifact
         if: github.ref == 'refs/heads/master'
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: ./output
+
+  deploy:
+    name: Deploy
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/master' && github.repository_owner == 'rust-lang'
+    needs: build
+
+    permissions:
+      pages: write
+      id-token: write
+
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    steps:
+      - name: Deploy to GitHub Pages
+        uses: actions/deploy-pages@v4
+        id: deployment
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: "${{ secrets.AWS_ACCESS_KEY_ID }}"
+          aws-secret-access-key: "${{ secrets.AWS_SECRET_ACCESS_KEY }}"
+          aws-region: us-west-1
+      - name: Invalidate CloudFront cache
+        run: aws cloudfront create-invalidation --distribution-id E3URKC86CEGJWE --paths "/*"
